load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")

package_group(
    name = "entrypoint",
    packages = [
        "//src/bg/...",
        "//src/contentScripts",
        "//src/entryPoints/...",
        "//src/injections",
        "//src/options/presentation/scripts",
        "//src/storage/compositionRoot/...",
    ],
)

package_group(
    name = "presentation",
    packages = [
        "//src/features/autoRefresh/presentation/...",
        "//src/features/avatars/presentation/...",
        "//src/features/batchLock/presentation/...",
        "//src/features/blockDrafts/presentation/...",
        "//src/features/bulkMove/presentation/...",
        "//src/features/bulkReportReplies/presentation/...",
        "//src/features/ccDarkTheme/presentation/...",
        "//src/features/ccDragAndDropFix/presentation/...",
        "//src/features/ccForceHideDrawer/presentation/...",
        "//src/features/enhancedAnnouncementsDot/presentation/...",
        "//src/features/extraInfo/presentation/...",
        "//src/features/fixPEKB381989895/presentation/...",
        "//src/features/fixedToolbar/presentation/...",
        "//src/features/flattenThreads/core",
        "//src/features/flattenThreads/presentation/...",
        "//src/features/flattenThreads/ui/components",
        "//src/features/imageMaxHeight/presentation/...",
        "//src/features/increaseContrast/presentation/...",
        "//src/features/infiniteScroll/presentation/...",
        "//src/features/interopThreadPage/presentation/...",
        "//src/features/linkDialogFix/presentation/...",
        "//src/features/loadDrafts/presentation/...",
        "//src/features/logStartupData/presentation/...",
        "//src/features/previousPosts/presentation/...",
        "//src/features/profileIndicator/presentation/...",
        "//src/features/redirect/presentation/...",
        "//src/features/repositionExpandThread/presentation/...",
        "//src/features/stickySidebarHeaders/presentation/...",
        "//src/features/threadPageDesignWarning/presentation/...",
        "//src/features/threadToolbar/presentation/...",
        "//src/features/uiSpacing/presentation/...",
        "//src/features/workflows/presentation/...",
        "//src/options/presentation/...",
        "//src/presentation/...",
        "//src/updateNotifier/presentation/...",
    ],
)

package_group(
    name = "ui",
    packages = [
        "//src/features/batchLock/infrastructure/ui/...",
        "//src/features/batchLock/ui/...",
        "//src/features/bulkMove/infrastructure/ui/...",
        "//src/features/bulkMove/ui/...",
        "//src/features/bulkReportReplies/infrastructure/ui/...",
        "//src/features/bulkReportReplies/ui/...",
        "//src/features/ccDarkTheme/ui/...",
        "//src/features/flattenThreads/ui/...",
        "//src/features/threadToolbar/ui/...",
        "//src/features/workflows/ui/...",
        "//src/infrastructure/ui/...",
        "//src/options/ui/...",
        "//src/ui/...",
        "//src/updateNotifier/infrastructure/ui/...",
        "//src/updateNotifier/ui/...",
    ],
)

package_group(
    name = "infrastructure_presentation",
    packages = [
        "//src/infrastructure/presentation/...",
    ],
)

package_group(
    name = "infrastructure_repositories",
    packages = [
        "//src/options/infrastructure/repositories/...",
        "//src/storage/infrastructure/repositories/...",
    ],
)

package_group(
    name = "infrastructure_services",
    packages = [
        "//src/infrastructure/services/...",
        "//src/infrastructure/ui/services/...",
        "//src/storage/infrastructure/services/...",
    ],
)

package_group(
    name = "core",
    packages = [],
)
