load("@aspect_rules_js//js:defs.bzl", "js_library")
load("//tools:common_js_project.bzl", "common_js_project")
load("//tools/preprocessor:bzl/preprocessor.bzl", "preprocessor")

preprocessor(
    name = "preprocessed_bg",
    src = "bg.pre.js",
    out = "bg.js",
    defined_dependencies = select({
        "//:mv3": ["MV3"],
        "//conditions:default": [],
    }) + select({
        "//src/killSwitch:should_enable_kill_switch_mechanism": ["ENABLE_KILL_SWITCH_MECHANISM"],
        "//conditions:default": [],
    }),
)

common_js_project(
    name = "bg",
    srcs = [":preprocessed_bg"],
    deps = [
        "//:node_modules/@avm99963/sw-xhr",
        "//src/common",
        "//src/common/options",
        "//src/killSwitch",
        "//src/options/bgHandler",
        "//src/storage/infrastructure/services",
        "//src/storage/migrations",
        "//src/storage/schemas",
        "//src/updateNotifier/presentation/bg",
    ],
    visibility = [
        "//:__pkg__",
    ],
)
