load("@aspect_rules_js//js:defs.bzl", "js_library")
load("//tools:bazel/swc.bzl", "swc_pkg")
load("//tools:common_ts_project.bzl", "common_ts_project")
load("//tools/preprocessor:bzl/preprocessor.bzl", "preprocessor")

preprocessor(
    name = "preprocessed_bg",
    src = "bg.pre.ts",
    out = "bg.ts",
    defined_dependencies = select({
        "//:mv3": ["MV3"],
        "//conditions:default": [],
    }) + select({
        "//src/killSwitch:should_enable_kill_switch_mechanism": ["ENABLE_KILL_SWITCH_MECHANISM"],
        "//conditions:default": [],
    }),
)

common_ts_project(
    name = "bg",
    srcs = [":preprocessed_bg"],
    allow_js = True,
    declaration = True,
    source_map = True,
    transpiler = swc_pkg,
    tsconfig = "//:tsconfig_pkg",
    visibility = [
        "//:__pkg__",
    ],
    deps = [
        "//:node_modules/@avm99963/sw-xhr",
        "//src/common",
        "//src/common/options",
        "//src/infrastructure/services/options",
        "//src/killSwitch",
        "//src/options/bgHandler",
        "//src/options/infrastructure/repositories",
        "//src/storage/infrastructure/services",
        "//src/storage/migrations",
        "//src/storage/schemas",
        "//src/updateNotifier/presentation/bg",
    ],
)
