load("//tools:common_js_project.bzl", "common_js_project")

common_js_project(
    name = "contentScripts",
    visibility = [
        "//:__pkg__",
    ],
    deps = [
        "//src/common",
        "//src/common/options",
        "//src/contentScripts/communityConsole/utils",
        "//src/contentScripts/utilsCommon",
        "//src/features/redirect/core",
    ],
)
