load("//tools:common_js_project.bzl", "common_js_project")

common_js_project(
    name = "contentScripts",
    visibility = [
        "//:__pkg__",
        "//src:entrypoint",
    ],
    deps = [
        "//src/common",
        "//src/common/options",
        "//src/contentScripts/utilsCommon",
        "//src/features/extraInfo/core/perForumStats",
        "//src/features/redirect/core",
    ],
)
