load("//tools:common_js_project.bzl", "common_js_project")
load("//tools/preprocessor:bzl/preprocessor.bzl", "preprocessor")
load(":config.bzl", "enable_kill_switch_mechanism")

preprocessor(
    name = "index",
    src = "index.pre.js",
    out = "index.js",
    defined_dependencies = select({
        "//:gecko": ["GECKO"],
        "//conditions:default": [],
    }),
)

common_js_project(
    name = "killSwitch",
    srcs = glob(
        ["**/*.js"],
        exclude = [
            "**/*.test.js",
            "**/*.pre.js",
        ],
    ) + [":index"],
    visibility = [
        "//src/bg:__subpackages__",
        "//src/xhrInterceptor/killSwitchHandler:__subpackages__",
    ],
    deps = [
        "//:node_modules/semver",
        "//src/common",
        "//src/common/options",
        "//src/killSwitch/api_proto",
    ],
)

enable_kill_switch_mechanism(
    name = "enable_kill_switch_mechanism",
    build_setting_default = True,
)

config_setting(
    name = "should_enable_kill_switch_mechanism",
    flag_values = {
        "//src/killSwitch:enable_kill_switch_mechanism": "true",
    },
    visibility = [
        "//src/bg:__subpackages__",
        "//tools/preprocessor:__subpackages__",
    ],
)
