load("//tools:common_js_project.bzl", "common_js_project")
load("//tools/preprocessor:bzl/preprocessor.bzl", "preprocessor")
load(":bzl/config.bzl", "enable_kill_switch_mechanism", "host")
load(":bzl/config_file.bzl", "config_file")

config_file(
    name = "config",
    out = "config.js",
    host = ":host",
)

preprocessor(
    name = "index",
    src = "index.pre.js",
    out = "index.js",
    defined_dependencies = select({
        "//:gecko": ["GECKO"],
        "//conditions:default": [],
    }),
)

common_js_project(
    name = "killSwitch",
    srcs = glob(
        ["**/*.js"],
        exclude = [
            "**/*.test.js",
            "**/*.pre.js",
        ],
    ) + [
        ":config",
        ":index",
    ],
    visibility = [
        "//src/bg:__subpackages__",
        "//src/xhrInterceptor/killSwitchHandler:__subpackages__",
    ],
    deps = [
        "//:node_modules/semver",
        "//src/common",
        "//src/common/options",
        "//src/killSwitch/api_proto",
    ],
)

enable_kill_switch_mechanism(
    name = "enable_kill_switch_mechanism",
    build_setting_default = True,
)

config_setting(
    name = "should_enable_kill_switch_mechanism",
    flag_values = {
        "//src/killSwitch:enable_kill_switch_mechanism": "true",
    },
    visibility = [
        "//src/bg:__subpackages__",
        "//tools/preprocessor:__subpackages__",
    ],
)

host(
    name = "host",
    build_setting_default = "https://twpt-grpc-web.avm99963.com/",
)
