load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load(":defs.bzl", "lit_localize")

copy_to_bin(
    name = "interchange_files",
    srcs = glob(["source/*.xlf"]),
    visibility = ["//tools/syncTranslations:__pkg__"],
)

# Source code that uses msg() to localize strings.
filegroup(
    name = "localized_code",
    srcs = [
        "//src:non_compiled_source",
    ],
)

lit_localize(
    name = "lit-locales",
    operation = "build",
    visibility = [
        "//:__pkg__",
        "//src:__subpackages__",
    ],
)
