load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@aspect_rules_webpack//webpack:defs.bzl", "webpack_bundle")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(
    name = "node_modules",
)

ts_config(
    name = "tsconfig",
    src = ":tsconfig.json",
    deps = ["//:tsconfig"],
)

ts_project(
    name = "project",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.test.ts"],
    ),
    source_map = True,
    transpiler = swc,
    tsconfig = ":tsconfig",
    deps = [
        ":node_modules/@types/node",
        "//src/common/options",
    ],
)

webpack_bundle(
    name = "bundle",
    srcs = [":project"],
    entry_points = {
        "printOptionsPrototypeJSON.js": "printOptionsPrototypeJSON.bundle",
    },
    node_modules = ":node_modules",
)

js_binary(
    name = "printOptionsPrototypeJSON",
    data = [":bundle"],
    entry_point = "printOptionsPrototypeJSON.bundle.js",
)

sh_test(
    name = "smoke_test",
    size = "small",
    testonly = True,
    srcs = ["smoke_test.sh"],
    args = ["$(location :printOptionsPrototypeJSON)"],
    data = [":printOptionsPrototypeJSON"],
)
