load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@aspect_rules_webpack//webpack:defs.bzl", "webpack_bundle")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(
    name = "node_modules",
)

ts_config(
    name = "tsconfig",
    src = ":tsconfig.json",
    deps = ["//:tsconfig_base"],
)

ts_project(
    name = "project",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.test.ts"],
    ),
    source_map = True,
    transpiler = swc,
    tsconfig = ":tsconfig",
    deps = [
        ":node_modules/@babel/parser",
        ":node_modules/@babel/traverse",
        ":node_modules/@babel/types",
        ":node_modules/@types/babel__traverse",
        ":node_modules/@types/node",
        ":node_modules/@xmldom/xmldom",
    ],
)

webpack_bundle(
    name = "bundle",
    srcs = [":project"],
    entry_points = {
        "syncTranslations.js": "syncTranslations.bundle",
    },
    node_modules = ":node_modules",
    webpack_config = "webpack/webpack.config.js",
)

js_binary(
    name = "syncTranslations",
    data = [
        ":bundle",
        "//src/lit-locales:interchange_files",
    ],
    entry_point = "syncTranslations.bundle.js",
)
