load("@aspect_rules_js//js:defs.bzl", "js_library")
load("//tools:bazel/swc.bzl", "swc_pkg")
load("//tools:common_js_project.bzl", "common_js_project")
load("//tools:common_ts_project.bzl", "common_ts_project")
load("//tools/preprocessor:bzl/preprocessor.bzl", "preprocessor")

preprocessor(
    name = "options_utils",
    src = "optionsUtils.pre.js",
    out = "optionsUtils.js",
    defined_dependencies = select({
        "//:production": ["PRODUCTION"],
        "//conditions:default": [],
    }),
)

common_ts_project(
    name = "ts",
    allow_js = True,
    declaration = True,
    source_map = True,
    transpiler = swc_pkg,
    tsconfig = "//:tsconfig_pkg",
)

common_js_project(
    name = "js",
    srcs = [":options_utils"],
    deps = [":ts"],
)

js_library(
    name = "options",
    visibility = [
        "//src:__subpackages__",
        "//tools/printOptionsPrototypeJSON:__pkg__",
    ],
    deps = [
        ":js",
        ":ts",
    ],
)
