load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@fremtind_rules_vitest//vitest:defs.bzl", "vitest_test")
load("//tools:bazel/swc.bzl", "swc_pkg", "swc_pkg_strict")
load("//tools:common_js_project.bzl", "common_js_project")
load("//tools:common_ts_project.bzl", "common_ts_project")
load("//tools/preprocessor:bzl/preprocessor.bzl", "preprocessor")

preprocessor(
    name = "options_utils",
    src = "optionsUtils.pre.js",
    out = "optionsUtils.js",
    defined_dependencies = select({
        "//:production": ["PRODUCTION"],
        "//conditions:default": [],
    }),
)

common_ts_project(
    name = "ts",
    srcs = glob(
        ["**/*.ts"],
        exclude = [
            "**/*.test.ts",
            "**/*.pre.ts",
            "testUtils.ts",
        ],
    ),
    allow_js = True,
    declaration = True,
    source_map = True,
    transpiler = swc_pkg,
    tsconfig = "//:tsconfig_pkg",
)

common_js_project(
    name = "js",
    srcs = [":options_utils"],
    deps = [
        ":ts",
        "//src/storage/compositionRoot",
    ],
)

js_library(
    name = "options",
    visibility = [
        "//src:__subpackages__",
        "//tools/printOptionsPrototypeJSON:__pkg__",
    ],
    deps = [
        ":js",
        ":ts",
    ],
)

vitest_test(
    name = "test",
    config = "//:vitest_config",
    data = [
        "Option.ts",
        "OptionsConfiguration.test.ts",
        "OptionsConfiguration.ts",
        "optionsPrototype.ts",
        "testUtils.ts",
    ],
    node_modules = "//:node_modules",
)

common_ts_project(
    name = "test_utils",
    srcs = ["testUtils.ts"],
    allow_js = True,
    declaration = True,
    source_map = True,
    transpiler = swc_pkg_strict,
    tsconfig = "//:tsconfig_pkg_strict",
    visibility = [
        "//src/infrastructure/services/options:__subpackages__",
    ],
    deps = [":options"],
)
