load("//tools:common_js_project.bzl", "common_js_project")

common_js_project(
    name = "styles",
    visibility = [
        # TODO(https://iavm.xyz/b/twpowertools/256): Delete the following
        # package from the list.
        "//src:__pkg__",
        "//src:presentation",
        "//src:ui",
    ],
)
