load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(
    name = "node_modules",
)

ts_config(
    name = "tsconfig",
    src = ":tsconfig.json",
)

ts_project(
    name = "project",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.test.ts"],
    ),
    transpiler = swc,
    tsconfig = ":tsconfig",
    deps = [
        ":node_modules/@types/node",
        ":node_modules/@xmldom/xmldom",
    ],
)

js_binary(
    name = "normalize_xliff_files",
    data = [":project"],
    entry_point = "normalize.js",
    visibility = ["//src/lit-locales:__subpackages__"],
)
