load("//tools:common_js_project.bzl", "common_js_project")
load("//tools/preprocessor:bzl/preprocessor.bzl", "preprocessor")

preprocessor(
    name = "options_page",
    src = "optionsPage.pre.json5",
    out = "optionsPage.json5",
    defined_dependencies = select({
        "//:mv3": ["MV3"],
        "//conditions:default": [],
    }),
)

common_js_project(
    name = "old",
    assets = [
        ":options_page",
    ],
    visibility = [
        "//:__pkg__",
    ],
    deps = [
        "//src/common",
        "//src/common/options",
        "//src/storage/compositionRoot",
    ],
)
